fix(styles): fixed input border radius on iOS Safari

--- a/packages/styles/scss/_reset.scss
+++ b/packages/styles/scss/_reset.scss
@@ -151,6 +151,12 @@ select {
   -moz-appearance: none;
 }
 
+// Reset border-radius on iOS Safari
+input,
+textarea {
+  border-radius: 0;
+}
+
 *,
 *::before,
 *::after {
